# weppcloud-ai-agent-skills

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  report_upset_reckoning_hydroshape.tex
tmp_upset_reckoning_analysis/: am_return_periods_burned.csv  cta_return_periods_burned.csv  cta_return_periods_peak_discharge_comparison.csv  cta_return_periods_undisturbed.csv  cta_top25_rank_table_burned_vs_undisturbed.csv  soil_daily_means_burned_subset.csv  summary.json
tmp_upset_reckoning_analysis3/: am_return_periods_undisturbed.csv  cta_return_periods_burned_with_soil.csv  cta_return_periods_peak_discharge_comparison.csv  cta_return_periods_undisturbed_with_soil.csv  cta_top30_rank_table_burned_vs_undisturbed.csv  key_date_event_comparison.csv  key_date_soil_comparison.csv  soil_daily_means_burned_subset.csv  soil_daily_means_undisturbed_subset.csv  summary.json
tmp_upset_reckoning_desync/: control_event_figures.tex  control_events_matched.csv  desync_event_metrics.csv  desync_group_summary.csv  desync_group_summary_table.tex  desync_metrics_table.tex  event_union_topN.csv  flagged_event_figures.tex  flagged_events.csv  meta.json
tmp_upset_reckoning_hydroshape/: burned_top_events_with_diagnostics.csv  meta.json  top_events_hydroshape_comparison.csv  undisturbed_top_events_with_diagnostics.csv
tmp_upset_reckoning_landuse_peakflow/: burned_landuse_area_summary.csv  burned_pass_peakro_by_day_and_class.csv  forest_flash_index_rank_summary.csv  forest_peakro_area_weighted_mean_rank_summary.csv  meta.json  shrub_flash_index_rank_summary.csv  (+3 more)
(+41 files in other folders)
